--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>spring-web</artifactId>
             <version>${spring-version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>1.5.1.RELEASE</version>
+        </dependency>
         <!--JSON Mapping-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
