--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,23 @@
             <artifactId>spring-data-mongodb</artifactId>
             <version>1.5.1.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>3.2.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>3.2.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>3.2.1.RELEASE</version>
+        </dependency>
+
         <!--JSON Mapping-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
