--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <version>3.2.1.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
+        </dependency>
+
         <!--JSON Mapping-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
