add validation to user creation

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.3.0.Final</version>
+        </dependency>
 
         <!--JSON Mapping-->
         <dependency>
