--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,13 @@
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.mangofactory</groupId>
+            <artifactId>swagger-springmvc</artifactId>
+            <version>0.8.8</version>
+        </dependency>
     </dependencies>
+
     <build>
         <resources>
             <resource>
